--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
             <groupId>paa</groupId>
             <artifactId>provincias</artifactId>
             <version>1.0-SNAPSHOT</version>
